src/objects/BMCServiceDesk__Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Back_out_Validation_Plan__c</fullName>
        <label>Back-out Validation Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Downtime__c</fullName>
        <label>Estimated Downtime (in Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_of_not_completing_the_change__c</fullName>
        <label>Risk of not completing the change</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Roll_out_Validation_Plan__c</fullName>
        <label>Roll-out Validation Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Trigger_00__c</fullName>
        <description>This formula field is used for time based workflow action scheduling.</description>
        <formula>NOW() - 0.04145</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Trigger 00</label>
        <type>DateTime</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__FKPriority__c</columns>
        <columns>BMCServiceDesk__Change_Description__c</columns>
        <columns>BMCServiceDesk__FKInitiator__c</columns>
        <columns>BMCServiceDesk__FKStatus__c</columns>
        <columns>BMCServiceDesk__Change_Flag__c</columns>
        <columns>BMCServiceDesk__Scheduled_Start_Date__c</columns>
        <columns>BMCServiceDesk__Scheduled_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__RemedyforceChangeRequestView</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__FKPriority__c</columns>
        <columns>BMCServiceDesk__Change_Description__c</columns>
        <columns>BMCServiceDesk__FKInitiator__c</columns>
        <columns>BMCServiceDesk__FKStatus__c</columns>
        <columns>BMCServiceDesk__Change_Flag__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>BMCServiceDesk__State__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Remedyforce ChangeRequest View</label>
    </listViews>
    <listViews>
        <fullName>CORHIO_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>CORHIO</label>
        <queue>CORHIO</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Change_Requests_Active</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Priority__c</columns>
        <columns>BMCServiceDesk__Category__c</columns>
        <columns>BMCServiceDesk__Status__c</columns>
        <columns>BMCServiceDesk__Initiator_ID__c</columns>
        <columns>BMCServiceDesk__Change_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCServiceDesk__Status__c</field>
            <operation>notEqual</operation>
            <value>7 CANCELLED</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__Status__c</field>
            <operation>notEqual</operation>
            <value>5 APPROVED</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__Status__c</field>
            <operation>notEqual</operation>
            <value>6 CLOSED</value>
        </filters>
        <label>Change Requests - Active</label>
    </listViews>
    <listViews>
        <fullName>Change_Requests_Approved</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Priority__c</columns>
        <columns>BMCServiceDesk__Category__c</columns>
        <columns>BMCServiceDesk__Status__c</columns>
        <columns>BMCServiceDesk__Initiator_ID__c</columns>
        <columns>BMCServiceDesk__Change_Flag__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCServiceDesk__Status__c</field>
            <operation>equals</operation>
            <value>5 APPROVED</value>
        </filters>
        <label>Change Requests - Approved</label>
    </listViews>
    <listViews>
        <fullName>Clinical_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Clinical</label>
        <queue>Clinical</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Integration_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Integration</label>
        <queue>Integration</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jiva_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Jiva</label>
        <queue>Jiva</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NMHIE_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>NMHIE</label>
        <queue>NMHIE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nant_IMT_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>IMT</label>
        <queue>IMT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PrimeSuite_EMR_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>PrimeSuite EMR</label>
        <queue>PrimeSuite_EMR</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Prophet_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Prophet</label>
        <queue>Prophet</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Security_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Security</label>
        <queue>Security</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CR{00000000}</displayFormat>
        <label>Change #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Cannot_Update_Closed_Change_Request</fullName>
        <active>true</active>
        <description>This Rule does not allow user to modify record, if it is closed.</description>
        <errorConditionFormula>AND( NOT( BMCServiceDesk__State__c ) , NOT(PRIORVALUE( BMCServiceDesk__State__c ) ), NOT( ISNEW() ),NOT( ISCHANGED( BMCServiceDesk__Total_Duration_minutes__c ) )  )</errorConditionFormula>
        <errorMessage>This change request is closed. Reopen the change request to modify it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Check_ActualEndDate</fullName>
        <active>true</active>
        <description>This rule checks to make sure that Actual End Date comes always after Actual Start Date.</description>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__Actual_End_Date__c),ISBLANK(BMCServiceDesk__Actual_End_Date__c) ) ),OR( BMCServiceDesk__Actual_End_Date__c &lt; BMCServiceDesk__Actual_Start_Date__c,  BMCServiceDesk__Actual_End_Date__c = BMCServiceDesk__Actual_Start_Date__c) )</errorConditionFormula>
        <errorMessage>Actual End Date must be later than Actual Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Check_ReviewDate</fullName>
        <active>true</active>
        <description>This rule checks to make sure that Review Date comes always after Actual End Date.</description>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__Review_Date__c),ISBLANK(BMCServiceDesk__Review_Date__c) ) ),OR( BMCServiceDesk__Review_Date__c &lt; BMCServiceDesk__Actual_End_Date__c,  BMCServiceDesk__Actual_End_Date__c = BMCServiceDesk__Review_Date__c) )</errorConditionFormula>
        <errorMessage>The Review Date must be later than the Actual End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Check_ScheduledEndDate</fullName>
        <active>true</active>
        <description>This rule checks to make sure that Scheduled End Date comes always after Schedule Start Date.</description>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__Scheduled_End_Date__c),ISBLANK(BMCServiceDesk__Scheduled_End_Date__c) ) ), BMCServiceDesk__Scheduled_End_Date__c &lt; BMCServiceDesk__Scheduled_Start_Date__c )</errorConditionFormula>
        <errorMessage>Scheduled End Date must be later than Scheduled Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Check_ScheduledStartDate</fullName>
        <active>true</active>
        <description>This rule checks to make sure that Actual End Date comes always after Scheduled Start Date.</description>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__Scheduled_Start_Date__c),ISBLANK(BMCServiceDesk__Scheduled_Start_Date__c) ) ),OR( BMCServiceDesk__Actual_End_Date__c &lt; BMCServiceDesk__Scheduled_Start_Date__c, BMCServiceDesk__Actual_End_Date__c = BMCServiceDesk__Scheduled_Start_Date__c) )</errorConditionFormula>
        <errorMessage>The Actual End Date must be later than the Scheduled Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_is_required_field</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( BMCServiceDesk__Change_Description__c)</errorConditionFormula>
        <errorMessage>Description is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Changes_Scheduled_Start_and_End</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED( BMCServiceDesk__Scheduled_Start_Date__c ) || ISCHANGED( BMCServiceDesk__Scheduled_End_Date__c )) 

&amp;&amp; 

(BMCServiceDesk__Status__c = &apos;4 PENDING APPROVAL&apos; || BMCServiceDesk__Status__c = &apos;5 APPROVED&apos; || BMCServiceDesk__Status__c = &apos;6 CLOSED&apos;)

&amp;&amp;

Change_Manager__c != $User.Id</errorConditionFormula>
        <errorMessage>Scheduled Start and End may only be modified by the Change Manager after approval has been requested.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Manual_Status_Chg_to_5_APPROVED</fullName>
        <active>true</active>
        <errorConditionFormula>BMCServiceDesk__Status__c = &apos;5 APPROVED&apos; &amp;&amp;
NOT( BMCServiceDesk__Approved__c )</errorConditionFormula>
        <errorMessage>The Status cannot be manually set to &apos;5 APPROVED&apos;. Please submit this Change Request for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Scheduled_Start_and_End</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK( BMCServiceDesk__Scheduled_Start_Date__c ) || ISBLANK( BMCServiceDesk__Scheduled_End_Date__c )) 

&amp;&amp; 

(BMCServiceDesk__Status__c = &apos;4 PENDING APPROVAL&apos; || BMCServiceDesk__Status__c = &apos;5 APPROVED&apos; || BMCServiceDesk__Status__c = &apos;6 CLOSED&apos;)</errorConditionFormula>
        <errorMessage>Scheduled Start and End are required to submit for approval.</errorMessage>
    </validationRules>
</CustomObject>